Add pull config from remote DB

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -4,7 +4,7 @@ rootLogger=INFO, LOGFILE
 # Direct to a file
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName = Agent.log
+appender.file.fileName = ResourceManager.log
 appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 appender.file.filter.threshold.type = ThresholdFilter
