--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:h2:file:./.agent_db
+spring.datasource.url=jdbc:h2:file:./.manager_db
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=agent
-spring.datasource.password=Agent_pwd
+spring.datasource.username=resource_manager
+spring.datasource.password=manager_pwd
+spring.sql.init.mode=always
 spring.jpa.database=h2
-
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
